# MISRC

./: .gitignore  README.md
.github/workflows/: build.yml  misrc_capture_build.yml  misrc_capture_windows_build.yml
assets/hardware-images/: MISRC-v0.0.5-Transparent-Hand-Soldered.avif  MISRC-v0.0.5-Transparent-Hand-Soldered.jxl  MISRC_v1.5_Sony_ILCE-7RM3_2024.06.07_14.30.14.jxl
firmware/hsdaoh/: README.md  hsdaoh_nano20k_misrc.gprj
firmware/hsdaoh/common/async_fifo/: async_fifo.v  fifomem.v  rptr_empty.v  sync_r2w.v  sync_w2r.v  wptr_full.v
firmware/hsdaoh/common/hdmi/: auxiliary_video_information_info_frame.v  hdmi.v  packet_assembler.v  packet_picker.v  serializer.v  tmds_channel.v
firmware/hsdaoh/common/hsdaoh/: hsdaoh_core.v
firmware/hsdaoh/common/uart_i2c_bridge/: i2c_master.v  uart_i2c_bridge.v  uart_rx.v  uart_tx.v
firmware/hsdaoh/hsdaoh_nano20k_misrc/: hsdaoh_nano20k_misrc.cst  hsdaoh_nano20k_misrc.sdc  top.v
hardware/: HISTORY.md
hardware-extra/: README.md
hardware-extra/fx3-tangnano20k-adapter/: README.md
hardware-extra/fx3-tangnano20k-adapter/kicad/: fx3_tn20k_adapter.kicad_pcb  fx3_tn20k_adapter.kicad_pro  fx3_tn20k_adapter.kicad_sch
hardware-extra/misrc_v2.5_case_panels/gerber/: misrc_v2.5_back_panel-B_Cu.gbr  misrc_v2.5_back_panel-B_Mask.gbr  misrc_v2.5_back_panel-B_Silkscreen.gbr  misrc_v2.5_back_panel-Edge_Cuts.gbr  misrc_v2.5_back_panel-F_Cu.gbr  misrc_v2.5_back_panel-F_Mask.gbr  misrc_v2.5_back_panel-F_Silkscreen.gbr  misrc_v2.5_back_panel-NPTH.drl  misrc_v2.5_back_panel-PTH.drl  misrc_v2.5_back_panel-job.gbrjob  misrc_v2.5_front_panel-B_Cu.gbr  misrc_v2.5_front_panel-B_Mask.gbr  misrc_v2.5_front_panel-B_Silkscreen.gbr  misrc_v2.5_front_panel-Edge_Cuts.gbr  misrc_v2.5_front_panel-F_Cu.gbr  misrc_v2.5_front_panel-F_Mask.gbr  misrc_v2.5_front_panel-F_Silkscreen.gbr  misrc_v2.5_front_panel-NPTH.drl  misrc_v2.5_front_panel-PTH.drl  misrc_v2.5_front_panel-job.gbrjob  misrc_v2.5_top_panel-B_Cu.gbr  misrc_v2.5_top_panel-B_Mask.gbr  misrc_v2.5_top_panel-B_Silkscreen.gbr  misrc_v2.5_top_panel-Edge_Cuts.gbr  misrc_v2.5_top_panel-F_Cu.gbr  misrc_v2.5_top_panel-F_Mask.gbr  misrc_v2.5_top_panel-F_Silkscreen.gbr  misrc_v2.5_top_panel-NPTH.drl  misrc_v2.5_top_panel-PTH.drl  misrc_v2.5_top_panel-job.gbrjob
hardware-extra/misrc_v2.5_case_panels/kicad/: misrc_v2.5_back_panel.kicad_pro  misrc_v2.5_back_panel.kicad_sch  misrc_v2.5_front_panel.kicad_pro  misrc_v2.5_front_panel.kicad_sch  misrc_v2.5_top_panel.kicad_pro  misrc_v2.5_top_panel.kicad_sch
hardware/BOM - Bill of Meterials/v0.0.6/: misrc_bom.csv
hardware/BOM - Bill of Meterials/v1.5/: MISRC V1.5.kicad_pcb_bom.csv
hardware/Gerbers/v0.0.6/: misrc-B_Adhesive.gbr  misrc-Edge_Cuts.gbr  misrc-F_Silkscreen.gbr
hardware/Gerbers/v1.5/: MISRC V1.5.kicad_pcb_netlist.ipc
hardware/KiCad/MISRC V1.0 (0.0.6)/: ad9235.kicad_sym  bnc_rosenberger.kicad_sym  input_adc.kicad_sch  power_supply.kicad_sch
hardware/KiCad/MISRC V1.5/: MISRC V1.5.kicad_pcb  adp7156.kicad_sym  gpifii_j6.kicad_sym  misrc.kicad_pcb_2.0.kicad_pcb  misrc.kicad_pcb_2.0.kicad_pro  misrc.kicad_pcb_universal_pads.kicad_pcb  misrc.kicad_pcb_universal_pads.kicad_pro  ~MISRC V1.5.kicad_pcb.lck
hardware/bill_of_materials/v1.5/: MISRC V1.5.kicad_pcb_bom.csv  MISRC V1.5.kicad_pcb_bom.xlsx  misrc_v1.5_bom.csv  misrc_v1.5_bom.xlsx
hardware/bill_of_materials/v1.5a/: misrc_v1.5a_bom.csv  misrc_v1.5a_bom.xlsx
hardware/gerber/0.0.6/: misrc-B_Mask.gbr  misrc-B_Paste.gbr  misrc-F_Mask.gbr  misrc-F_Paste.gbr  misrc-NPTH.drl
hardware/gerber/v0.0.6/: misrc-B_Cu.gbr  misrc-B_Silkscreen.gbr  misrc-F_Adhesive.gbr  misrc-F_Cu.gbr  misrc-PTH.drl  misrc-job.gbrjob
hardware/gerber/v1.5/: MISRC_v1.5-B_Cu.gbr  MISRC_v1.5-B_Mask.gbr  MISRC_v1.5-B_Paste.gbr  MISRC_v1.5-B_SilkS.gbr  MISRC_v1.5-Edge_Cuts.gbr  MISRC_v1.5-F_Cu.gbr  MISRC_v1.5-F_Mask.gbr  MISRC_v1.5-F_Paste.gbr  MISRC_v1.5-F_SilkS.gbr  MISRC_v1.5-NPTH.drl  MISRC_v1.5-PTH.drl  MISRC_v1.5-User_Comments.gbr  MISRC_v1.5.kicad_pcb_positions.csv  misrc-B_Cu.gbr  misrc-B_Mask.gbr  misrc-B_Paste.gbr  misrc-B_SilkS.gbr  misrc-Edge_Cuts.gbr  misrc-F_Cu.gbr  misrc-F_Mask.gbr  misrc-F_Paste.gbr  misrc-F_SilkS.gbr  misrc-User_Comments.gbr  positions.csv
hardware/kicad/: 4043.kicad_sym  input_adc.kicad_sch  misrc.kicad_pcb  misrc.kicad_pro  misrc.kicad_sch  power_supply.kicad_sch  tps6040x.kicad_sym
hardware/kicad/MISRC V1.5/: misrc.kicad_pcb_universal_pads.kicad_pro
hardware/kicad/dev/: audio_adc.kicad_sch  input_adc.kicad_sch  input_adc_CH1.kicad_sch  input_adc_CH2.kicad_sch  misrc_v2.5-rounded.kicad_prl  misrc_v2.5-rounded.kicad_pro  misrc_v2.5.kicad_pro  misrc_v2.5.kicad_sch  misrc_v2.5.round-tracks-config  power_supply.kicad_sch
hardware/kicad/v0.0.6/: gpifii_j7.kicad_sym  misrc_v0.0.6.kicad_pro
hardware/kicad/v1.5/: misrc.kicad_pcb  misrc.kicad_pro  misrc.kicad_sch  misrc_v1.5.kicad_pcb  misrc_v1.5.kicad_pro
hardware/kicad/v1.5a/: misrc_v1.5a.kicad_pcb  misrc_v1.5a.kicad_pro
hardware/kicad/v2.0/: README.md  audio_adc.kicad_sch  input_adc.kicad_sch  input_adc_CH2.kicad_sch  misrc_v2.0-rounded.kicad_pcb  misrc_v2.0-rounded.kicad_pro  misrc_v2.0.kicad_pcb  misrc_v2.0.kicad_pro  misrc_v2.0.kicad_sch  misrc_v2.0.round-tracks-config  power_supply.kicad_sch
misrc_extract/: CMakeLists.txt  README.md  extract.asm  main.c
misrc_tools/: CMakeLists.txt  README.md  cthreads.h  extract.asm  extract.c  extract.h  git-version.sh  meson.build  misrc_capture.c  misrc_extract.c  numcores.h  ringbuffer.c  ringbuffer.h  shm_anon.h  version.h.in
misrc_tools/cmake/: FindLibFLAC.cmake  GitVersion.cmake
misrc_tools/common/: capture.c  cthreads.h  extract.c  extract.h  misrc.h  misrc_options.h  ringbuffer.c  shm_anon.h  wave.h
misrc_tools/common/simple_capture/: simple_capture.h  simple_capture_mediafoundation.c  simple_capture_v4l2.c
misrc_tools/misrc_capture/: misrc_capture.c
misrc_tools/misrc_extract/: misrc_extract.c
misrc_tools/simple_capture/: simple_capture_avfoundation.m  simple_capture_v4l2.c
misrc_tools/test/: extract_test.c  simple_capture_test.c
windows-binaries/: README.md
(+170 files in other folders)
